# notifier

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  NOTICE.md  README.md  __init__.py  config.py  database.py  db_models.py  main.py  openapi.json  openapi.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish-image.yml
custom_types/: __init__.py  json.py
middleware/: __init__.py  concurrency_limit.py  dependencies.py  error_handlers.py  headers.py  openapi.py  rate_limit.py  request_size_limit.py  resilience.py  runtime_ssl.py
middleware/rate_limit/: __init__.py  hybrid.py  in_memory.py  ip.py  models.py  observability.py  redis_fixed_window.py
models/: __init__.py
models/access/: __init__.py  auth_models.py
models/alerting/: __init__.py  alerts.py  channels.py  incidents.py  receivers.py  requests.py  rules.py  silences.py
routers/: __init__.py
routers/observability/: __init__.py  alerts.py  incidents.py  jira.py
routers/observability/alerts/: __init__.py  access.py  alerts_routes.py  channels.py  integrations.py  rules.py  shared.py  silences.py  status.py  webhooks.py
routers/observability/jira/: __init__.py  config.py  discovery.py  incident_links.py  integrations.py  shared.py
services/: alertmanager_service.py  jira_service.py  notification_service.py  storage_db_service.py
services/alerting/: __init__.py  alerts_ops.py  channels_ops.py  integration_security_service.py  rule_import_service.py  ruler_yaml.py  rules_ops.py  silence_metadata.py  silences_ops.py  suppression.py
services/common/: __init__.py  access.py  encryption.py  http_client.py  meta.py  pagination.py  tenants.py  url_utils.py  visibility.py
services/incidents/: __init__.py  helpers.py
services/jira/: __init__.py  helpers.py
services/notification/: __init__.py  email_providers.py  payloads.py  senders.py  transport.py  validators.py
services/secrets/: provider.py  vault_client.py
services/storage/: __init__.py  channels.py  hidden_entity_storage.py  incidents.py  incidents_core.py  incidents_jira.py  incidents_sync.py  revocation.py  rules.py  serializers.py
templates/emails/: alert_notification.html  incident_assignment.html
tests/: _env.py  _regression_helpers.py  conftest.py  test_alert_ops.py  test_alerting_ops_and_transport.py  test_alertmanager_stateful_workflows.py  test_alerts_ops_metrics_edges.py  test_channel_delivery_visibility.py  test_channels_ops.py  test_channels_ops_edges.py  test_common_access_edges.py  test_config_validation_edges.py  test_group_share_revocation.py  test_helper_surfaces.py  test_incident_aggregation.py  test_incident_helpers_and_serializers.py  test_incidents_recipient_email.py  test_incidents_router.py  test_integration_security_and_jira_service.py  test_integration_security_service.py  test_jira_helpers_edges.py  test_main_entrypoint.py  test_main_startup_edges.py  test_middleware_core.py  test_middleware_rate_limit_and_database_edges.py  test_middleware_rate_limit_database_resilience_edges.py  test_notification_and_helper_edges_more.py  test_notification_email_providers.py  test_notification_payloads.py  test_notification_senders.py  test_notification_senders_error_handling.py  test_notification_service.py  test_notification_service_and_encryption.py  test_notification_service_email_edges.py  test_notification_transport.py  test_notification_validators.py  test_observability_router_endpoints_edges.py  test_openapi_middleware.py  test_refactor_compat_coverage_edges.py  test_regression_alert_delivery_notify_for_alerts_workflow.py  (+26 more)
