[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "notifier"
version = "0.0.2"
description = "Notifier alerting and incident-management service for the Observantio platform."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Observantio" }
]
keywords = ["observability", "alerting", "incidents", "fastapi"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.18.2",
  "pylint>=3.3.0",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
  "ignore::pytest.PytestRemovedIn9Warning",
]

[tool.coverage.run]
branch = true
omit = [
  "tests/*"
]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
]
fail_under = 100
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.11"
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_no_return = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_any_generics = true
no_implicit_optional = true
implicit_reexport = false
explicit_package_bases = true
mypy_path = ["."]
files = ["."]
exclude = [
  "^(tests/|build/|dist/|venv/|\\.venv/|__pycache__/|migrations/)",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["*.migrations.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["requests.*", "setuptools.*"]
ignore_missing_imports = true

[tool.pylint.main]
jobs = 1
extension-pkg-allow-list = ["sqlalchemy"]
ignore = [".git", "__pycache__", ".mypy_cache", ".pytest_cache", ".ruff_cache", ".venv", "venv", "build", "dist", "tmp", "vendor", "tests"]
init-hook = "import os,sys; cwd=os.getcwd(); sys.path.insert(0,cwd) if cwd not in sys.path else None"

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-many-arguments",
  "too-many-positional-arguments",
  "too-many-locals",
  "too-many-branches",
  "not-callable",
]

[tool.pylint.format]
max-line-length = 120
max-module-lines = 800


[tool.pylint.design]
max-args = 6
max-positional-arguments = 6
max-attributes = 200
max-public-methods = 60
max-returns = 30
max-nested-blocks = 8
max-statements = 250
min-public-methods = 0

[tool.pylint.basic]
variable-naming-style = "snake_case"
argument-naming-style = "snake_case"
attr-naming-style = "snake_case"

const-naming-style = "UPPER_CASE"
class-const-naming-style = "UPPER_CASE"

[tool.pylint.similarities]
min-similarity-lines = 8

[tool.hatch.build.targets.wheel]
# Service layout does not include a top-level package named "notifier".
bypass-selection = true
