[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "notifier"
version = "0.0.3"
description = "Notifier alerting and incident-management service for the Observantio platform."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Observantio" }]
keywords = ["observability", "alerting", "incidents", "fastapi"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Repository = "https://github.com/observantio/notifier"
Documentation = "https://observantio.github.io/pitch"
Changelog = "https://github.com/observantio/notifier/blob/main/CHANGELOG.md"

dependencies = [
  "fastapi==0.135.3",
  "starlette==1.0.0",
  "httpx==0.28.1",
  "pydantic==2.12.5",
  "pydantic-settings==2.13.1",
  "sqlalchemy==2.0.49",
  "uvicorn==0.43.0",
  "python-multipart==0.0.24",
  "cryptography==46.0.6",
  "pyjwt[crypto]==2.12.1",
  "passlib==1.7.4",
  "bcrypt==5.0.0",
  "email-validator==2.3.0",
  "aiosmtplib==5.1.0",
  "redis==7.4.0",
  "asyncpg==0.31.0",
  "psycopg2-binary==2.9.11",
  "tenacity==9.1.4",
  "pyyaml==6.0.3",
  "pyotp==2.9.0",
  "hvac==2.4.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.18.2",
  "types-PyYAML>=6.0.12.20250915",
  "pylint>=3.3.0",
  "ruff>=0.9.0",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
]

schemathesis = [
  "schemathesis>=4.14.2,<5",
]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]
fail_under = 100
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "PTH", "RUF", "ERA", "T20"]

[tool.ruff.lint.isort]
known-first-party = ["notifier"]

[tool.mypy]
python_version = "3.11"
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_no_return = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_any_generics = true
no_implicit_optional = true
implicit_reexport = false
explicit_package_bases = true
mypy_path = ["."]
files = ["."]
exclude = [
  "^(build|dist|venv|\\.venv|__pycache__|migrations)/",
  "^tests/",
]

[[tool.mypy.overrides]]
module = ["*.migrations.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["requests.*", "setuptools.*"]
ignore_missing_imports = true

[tool.pylint.main]
jobs = 1
extension-pkg-allow-list = ["sqlalchemy"]
ignore = [".git", "__pycache__", ".mypy_cache", ".pytest_cache", ".ruff_cache", ".venv", "venv", "build", "dist", "tmp", "vendor", "tests"]
init-hook = "import os, sys; cwd = os.getcwd(); sys.path.insert(0, cwd) if cwd not in sys.path else None"

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-many-arguments",
  "too-many-positional-arguments",
  "too-many-locals",
  "too-many-branches",
]

[tool.pylint.format]
max-line-length = 120
max-module-lines = 800

[tool.pylint.design]
max-args = 6
max-positional-arguments = 6
max-attributes = 35
max-public-methods = 25
max-returns = 10
max-nested-blocks = 5
max-statements = 80
min-public-methods = 0

[tool.pylint.basic]
variable-naming-style = "snake_case"
argument-naming-style = "snake_case"
attr-naming-style = "snake_case"
const-naming-style = "UPPER_CASE"
class-const-naming-style = "UPPER_CASE"

[tool.pylint.similarities]
min-similarity-lines = 8

[tool.hatch.build.targets.wheel]
packages = ["notifier"]
