[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "notifier"
version = "0.0.5"
description = "Notifier alerting and incident-management service for the Observantio platform."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Observantio" }]
keywords = ["observability", "alerting", "incidents", "fastapi"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "fastapi>=0.129.0",
  "starlette>=0.49.1",
  "httpx>=0.27.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.11.0",
  "sqlalchemy>=2.0.25",
  "uvicorn>=0.27.1",
  "python-multipart>=0.0.22",
  "cryptography>=46.0.5",
  "pyjwt[crypto]>=2.10.1",
  "passlib>=1.7.4",
  "bcrypt>=3.2.0",
  "email-validator>=2.1.0",
  "aiosmtplib>=1.1.6",
  "redis>=5.0.8",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.9",
  "tenacity>=8.2.2",
  "pyyaml>=6.0.2",
  "pyotp>=2.8.0",
  "hvac>=2.0.0",
]

[project.urls]
Repository = "https://github.com/observantio/notifier"
Documentation = "https://observantio.github.io/pitch"
Changelog = "https://github.com/observantio/notifier/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "mypy>=1.18.2",
  "types-PyYAML>=6.0",
  "pylint>=3.3.0",
  "ruff>=0.9.0",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
]

schemathesis = [
  "schemathesis>=4.14.2,<5",
]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning:pydantic\\..*",
  "ignore::DeprecationWarning:starlette\\..*",
]

[tool.mutmut]
paths_to_mutate = [
  "custom_types/json.py",
  "models/access/auth_models.py",
  "middleware/dependencies.py",
  "middleware/error_handlers.py",
  "middleware/headers.py",
  "middleware/request_size_limit.py",
  "middleware/resilience.py",
  "middleware/rate_limit/hybrid.py",
  "middleware/rate_limit/in_memory.py",
  "middleware/rate_limit/ip.py",
  "middleware/rate_limit/models.py",
  "middleware/rate_limit/redis_fixed_window.py",
  "routers/observability/alerts/access.py",
  "services/common/__init__.py",
  "services/common/access.py",
  "services/common/encryption.py",
  "services/common/http_client.py",
  "services/common/meta.py",
  "services/common/pagination.py",
  "services/common/tenants.py",
  "services/common/url_utils.py",
  "services/common/visibility.py",
  "services/secrets/provider.py",
  "services/secrets/vault_client.py",
]
tests_dir = ["tests/test_url_utils.py"]
do_not_mutate = [
  "*/tests/*",
  "*/mutants/*",
  "*/openapi.json",
  "*/openapi.yaml",
  "*/assets/*",
  "*/configs/*",
  "*/migrations/*",
]
pytest_add_cli_args = ["-q"]
mutate_only_covered_lines = true

[tool.coverage.run]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]
fail_under = 100
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "PTH", "RUF", "ERA", "T20"]

[tool.ruff.lint.isort]
known-first-party = ["notifier"]

[tool.mypy]
python_version = "3.11"
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_no_return = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_any_generics = true
no_implicit_optional = true
implicit_reexport = false
explicit_package_bases = true
files = ["."]
exclude = [
  "^(build|dist|venv|\\.venv|__pycache__|migrations)/",
  "^tests/",
  "^mutants/",
]

[tool.pylint.main]
jobs = 4
extension-pkg-allow-list = ["sqlalchemy"]
ignore = [".git", "__pycache__", ".mypy_cache", ".pytest_cache", ".ruff_cache", ".venv", "venv", "build", "dist", "tmp", "vendor", "tests", "mutants"]
ignore-paths = ["^tests/", "^mutants/"]
init-hook = "import os, sys; cwd = os.getcwd(); sys.path.insert(0, cwd) if cwd not in sys.path else None"

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-many-locals",
  "too-many-branches",
]

[tool.pylint.format]
max-line-length = 120
max-module-lines = 800

[tool.pylint.design]
max-args = 5
max-positional-arguments = 4
max-attributes = 20
max-public-methods = 15
max-returns = 5
max-nested-blocks = 5
max-statements = 50
min-public-methods = 0

[tool.pylint.basic]
variable-naming-style = "snake_case"
argument-naming-style = "snake_case"
attr-naming-style = "snake_case"
const-naming-style = "UPPER_CASE"
class-const-naming-style = "UPPER_CASE"

[tool.pylint.similarities]
min-similarity-lines = 8

[tool.hatch.build.targets.wheel]
packages = ["notifier"]
